@@ -82,6 +82,21 @@ Long-term
 * Support extended association:
   https://groups.google.com/d/msg/orthanc-users/xD4d3mpc6ms/srF7E2goAAAJ
 
+---------
+Encodings
+---------
+
+* Support multiple specific character sets (cf. "SCSH32" in orthanc-tests)
+  http://dicom.nema.org/medical/dicom/current/output/chtml/part03/sect_C.12.html#sect_C.12.1.1.2
+* Support Simplified Chinese (ISO 2022 IR 58)
+* Support Supplementary Kanji set (ISO 2022 IR 159)
+* Implement the following unit tests:
+  - Japanese: http://dicom.nema.org/MEDICAL/dicom/2017c/output/chtml/part05/chapter_H.html
+  - Korean: http://dicom.nema.org/MEDICAL/dicom/2017c/output/chtml/part05/chapter_I.html
+  - Chinese:
+    http://dicom.nema.org/MEDICAL/dicom/2017c/output/chtml/part05/chapter_J.html
+    http://dicom.nema.org/MEDICAL/dicom/2017c/output/chtml/part05/chapter_K.html
+
 
 =======
 Plugins
